--- a/resources.css
+++ b/resources.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: url('cyber-bg.jpg') no-repeat center center fixed;
+  background: url('backg.jpeg') no-repeat center center fixed;
   background-size: cover;
   color: #222;
 }
